# jolt

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  lint.yaml  type.yaml
.hypothesis/constants/: 6c8b4edd40d50b23  8a4599383b175be1  941558260a3a4ef5  bcd1dd4f5b1f8cb9  c56f3f9cb19ba52d
docs/: index.md  quickstart.md
docs/benchmarks/: overview.md  results.md  running.md
docs/dev/: adding_a_compressor.md  adding_an_adapter.md  architecture.md  debugging.md  index.md  release.md  setup.md  style.md  testing.md
docs/research/: ablations.md  algorithm.md  comparison_with_baselines.md  extending.md  free_zone.md  index.md  math.md  paper_notes.md  reproduction_notes.md  spectral_motivation.md
docs/user/: api.md  compression_methods.md  concepts.md  faq.md  index.md  installation.md  long_context.md  performance_guide.md  troubleshooting.md
examples/: 01_quickstart.py  02_direct_compression.py  03_custom_allocator.py  04_method_comparison.py  05_long_context.py
kvcompress/: __init__.py  api.py  cli.py
kvcompress/adapters/: huggingface.py  registry.py  vllm.py  vllm_kv_offload.py
kvcompress/benchmarks/: reconstruction.py
kvcompress/cache/: manager.py  metadata.py
kvcompress/compressor/: __init__.py  allocator.py  base.py  dispatch.py  flashjolt.py  identity.py  jl.py  jolt.py  lowrank.py  quantization.py  quantization_only.py  residual.py  svd.py  tucker.py
kvcompress/kernels/triton/: compression.py  tucker_reconstruct.py
kvcompress/runtime/: __init__.py  memory.py  profiler.py
scripts/: cleanup.sh  profile_model.py  reproduce_paper_numbers.sh  run_memory_benchmark.py  run_needle_haystack.py  run_speed_benchmark.py  run_table2_reconstruction.py  setup.sh  sweep_compression_ratio.py  validate_install.py
src/kvcompress/: __init__.py  api.py  cli.py
src/kvcompress/adapters/: __init__.py  deepseek.py  falcon.py  gemma.py  huggingface.py  internlm.py  llama.py  mistral.py  mixtral.py  phi.py  qwen.py  registry.py  vllm.py  vllm_kv_offload.py
src/kvcompress/benchmarks/: __init__.py  memory.py  plot.py  reconstruction.py  throughput.py
src/kvcompress/cache/: __init__.py  compress.py  manager.py  metadata.py
src/kvcompress/compressor/: __init__.py  allocator.py  base.py  flashjolt.py  identity.py  jl.py  jolt.py  lowrank.py  quantization.py  quantization_only.py  residual.py  svd.py  tucker.py
src/kvcompress/kernels/: __init__.py
src/kvcompress/kernels/triton/: __init__.py  compression.py  tucker_reconstruct.py
src/kvcompress/runtime/: __init__.py  memory.py  profiler.py
tests/integration/: conftest.py  test_gpt2.py
tests/property/: test_properties.py
tests/unit/: adapter_test.py  algorithmic_allocator_test.py  algorithmic_jl_quant_test.py  algorithmic_jolt_test.py  algorithmic_tucker_test.py  allocator_test.py  baseline_compressors_test.py  cache_test.py  cli_test.py  cli_test_extended.py  compressor_jolt_test.py  dispatch_test.py  family_shims_test.py  jl_test.py  kernels_test.py  metadata_algorithmic_test.py  quantization_test.py  residual_algorithmic_test.py  residual_test.py  runtime_test.py  svd_test.py  tucker_test.py  vllm_kv_offload_test.py  vllm_test.py
