# pyproject.toml — lint, format, type-check, test, and coverage configuration.
#
# Package metadata (build-system, project, dependencies) lives in
# pyproject's [build-system] / [project] sections upstream of this file;
# this file is the configuration centre for tooling.

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["kvcompress", "tests", "examples", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF",
    "PT", "TID", "ARG", "PL",
]
ignore = [
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value
    "B008",     # do not call function in default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR0915", "N806", "ARG"]
"examples/**/*.py" = ["E402"]
"kvcompress/kernels/triton/**/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = false
warn_return_any = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["kvcompress"]

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "triton.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kvcompress.adapters.huggingface"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kvcompress.kernels.triton.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kvcompress.adapters.registry"
ignore_errors = true

[[tool.mypy.overrides]]
module = "kvcompress.benchmarks.*"
ignore_errors = true

# Vulture configuration.
# 80% confidence floor: vulture's 60% findings flag a lot of internal-but-useful
# symbols (lazy-export __getattr__, dataclass field names, subcommands exposed
# elsewhere). We exclude the patterns that consistently produce noise.
[tool.vulture]
min_confidence = 80
paths = ["kvcompress"]
exclude_patterns = [
    # ``if False: ... # TYPE_CHECKING`` is intentional — used by lazy-export
    # subpackages so the public surface is importable even when modules are
    # mid-edit. vulture flags the unsatisfiable ``if`` at 100% confidence.
    "*/__init__.py",
    # Stub / abstract methods that subclasses fill in.
    "kvcompress/compressor/base.py",
    # Properties / dataclass field names (vulture's string match is
    # imprecise on dataclass-heavy modules).
    "kvcompress/compressor/tucker.py",
    # Tests have dead helpers we don't care about.
    "tests/",
    # Benchmarks have dead CLI plumbing (version, validate, profile subcommands
    # are also exposed through kvcompress.cli but vulture sees them as unused
    # inside benchmarks/*).
    "kvcompress/benchmarks/",
]

[tool.coverage.run]
source = ["kvcompress"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require model downloads",
    "gpu: marks tests that require a CUDA device",
]
filterwarnings = [
    "ignore::DeprecationWarning:transformers.*",
    "ignore::DeprecationWarning:huggingface_hub.*",
    "ignore::FutureWarning:transformers.*",
]